--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "query-string": "^9.2.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "svix": "^1.76.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
